# logscolor

./: pyproject.toml
logscolor/: __init__.py
tests/: test_logscolor.py
