[tool.poetry]
name = "logscolor"
version = "0.1.0"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
